# soundpounder3000

./: .gitignore  README.md  compose.py  note.py  parse.py  pyproject.toml  soundpounder3000.py  test.py  token_params.py  tone.py  utils.py
scripts/: sp_wav_to_mp4.py  sp_wav_to_mp4_advanced.py
songs/: catchy_jingle.sp  chord_demo.sp  complex_test.sp  computer_polka.sp  fm_bell_demo.sp  full_range_test.sp  happy_birthday.sp  instrument_showcase.sp  interesting.sp  jazzy_chord_demo.sp  larrys_shitty_song.sp  larryssong.sp  masterpeace.sp  my_fuckin_song_title.sp  one_summers_day.sp  pad_demo.sp  pluck_demo.sp  seaside_chill_day.sp  simple_test.sp  simple_test_simple_test.sp  something.sp  string_test.sp  test.sp  twinkle_twinkle.sp  twosday.sp
src/soundpounder3000/: __init__.py  __main__.py  core.py  dsp.py  note.py  parse.py  token_params.py  tone.py
src/soundpounder3000/instruments/: __init__.py  fm.py  noise.py  pluck.py  pulse.py  saw.py  sine.py  square.py  string.py  triangle.py
tools/vscode-soundpounder-sp/: README.md  extension.js  install.sh  language-configuration.json  package.json
tools/vscode-soundpounder-sp/syntaxes/: sp.tmLanguage.json
