[project]
name = "soundpounder3000"
version = "0.1.0"
description = "Tiny fiddle-string-to-WAV synth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.4.2"]

[project.scripts]
main = "soundpounder3000.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soundpounder3000"]
